Fixed alignment issues... Again.

--- a/about.css
+++ b/about.css
@@ -128,7 +128,7 @@ ul {
 
 .featured_content {
   width: 755px;
-  height: 300px;
+  height: 200px;
   margin-left: 30px;
   margin-top: 30px;
 }
